[gd_scene load_steps=9 format=3 uid="uid://pdejia1kftaj"]

[ext_resource type="StyleBox" uid="uid://cretamudty6dn" path="res://addons/syuzhet_tools/base_panel.tres" id="1_426qa"]
[ext_resource type="Script" uid="uid://bi3k7mjjq66i1" path="res://addons/syuzhet_tools/quick_bake_tool.gd" id="1_jksg5"]
[ext_resource type="StyleBox" uid="uid://bbh5bjk27qlc5" path="res://addons/syuzhet_tools/header_label.tres" id="1_rb0oc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x3lob"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hji71"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n5lwt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c66t6"]

[sub_resource type="DPITexture" id="DPITexture_426qa"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M1 14a1 1 0 0 0 1 1h9.5a1 1 0 0 0 .707-.293l2.5-2.5A1 1 0 0 0 15 11.5V2a1 1 0 0 0-1-1H4.5a1 1 0 0 0-.707.293l-2.5 2.5A1 1 0 0 0 1 4.5zm1.25-9H11v7H2.25zm10 6.25v-6.5L14 3v6.5zm-1-7.5H3L4.75 2H13z\"/><path stroke=\"#e0e0e0\" stroke-linecap=\"round\" stroke-width=\"1.5\" d=\"M5.25 6.25 3.5 8m5.375-1.75-4.5 4.5M9.75 9 8 10.75\"/></svg>
"
base_scale = 1.5
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[node name="QuickBake" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_426qa")
script = ExtResource("1_jksg5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="QuickBaker" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuickBakerHeaderContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/QuickBaker"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_rb0oc")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/QuickBaker/QuickBakerHeaderContainer"]
layout_mode = 2

[node name="QuickBakerHeader" type="Button" parent="MarginContainer/VBoxContainer/QuickBaker/QuickBakerHeaderContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0.7058824)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0.7058824)
theme_override_styles/normal = SubResource("StyleBoxEmpty_x3lob")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hji71")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n5lwt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_c66t6")
disabled = true
button_mask = 0
text = "Quick Bake"
icon = SubResource("DPITexture_426qa")
alignment = 0

[node name="SceneNameLabel" type="Label" parent="MarginContainer/VBoxContainer/QuickBaker"]
unique_name_in_owner = true
layout_mode = 2
text = "No scene detected."
clip_text = true

[node name="OccluderBakeButton" type="Button" parent="MarginContainer/VBoxContainer/QuickBaker"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Bake Occluders
"

[node name="LightmapBakeButton" type="Button" parent="MarginContainer/VBoxContainer/QuickBaker"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Bake LightmapGI"

[connection signal="pressed" from="MarginContainer/VBoxContainer/QuickBaker/OccluderBakeButton" to="." method="_on_occluder_bake_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuickBaker/LightmapBakeButton" to="." method="_on_lightmap_bake_button_pressed"]
